tests/paczka1/fuzzy1/48194945.err
Error in line 5: 0Dlj1 S46 70,0
Error in line 12: 4YgL90 A573 78,2
Error in line 13: 4YgL90 S46 0,1
Error in line 7: 0Dlj1 A532 72,8
Error in line 22: 0Dlj1 S742 51,4
Error in line 15: 4YgL90 A573 30,6
